# pulsegraph

./: .gitignore  COMMERCIAL.md  Cargo.toml  README.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  api.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  snapshot.rs  state.rs  tray.rs
app/src/components/: Dropdown.tsx  Filters.tsx  Footer.tsx  Header.tsx  Heatmap.tsx  Preferences.tsx  ProjectBars.tsx  StreaksCard.tsx  UsageCard.tsx
app/src/hooks/: useSettings.ts  useSnapshot.ts
app/src/lib/: heatmap.test.ts  heatmap.ts  theme.test.ts  theme.ts
assets/: logo_gen.py
crates/cli/: Cargo.toml
crates/cli/src/: cache_path.rs  main.rs  render.rs
crates/cli/src/tui/: app.rs  color.rs  mod.rs  ui.rs
crates/core/: Cargo.toml  pricing.json
crates/core/src/: aggregate.rs  cache.rs  discovery.rs  lib.rs  model.rs  parse.rs  pricing.rs  scan.rs  stats.rs
