[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "app/src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
directories = "5"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
