[package]
name = "pulsegraph-cli"
edition.workspace = true
version.workspace = true

[[bin]]
name = "pulsegraph"
path = "src/main.rs"

[dependencies]
pulsegraph-core = { path = "../core" }
clap.workspace = true
directories = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
ratatui.workspace = true
crossterm.workspace = true
